# condensite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/condensite/: __init__.py  core.py  utils.py
src/examples/: example.py
src/examples/example_models/: LGBMPredictor.py  sklearnPredictor.py  torchPredictor.py
tests/: test_core.py
